--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
  @layer components{
 .link{
-    @apply hover:underline cursor-pointer;
+    @apply hover:underline cursor-pointer mx-2;
 }
 .btn{
     @apply bg-[#f8f9fa] p-3 rounded-md text-sm text-gray-800 hover:ring-1 hover:ring-gray-200 focus:outline-none active:ring-gray-300 hover:shadow-md 
